--- a/index.html
+++ b/index.html
@@ -81,21 +81,15 @@
                     Xidmətlər
                   </a>
                   <div class="menu services d-flex" data-toggle="services-menu">
-                    <div class="col-4 lightgray-bg">
+                    <div class="col-3 lightgray-bg menu-nav-left">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
                         <a
-                          href="./services-advisory.html"
+                          href="./services-tax.html"
                           class="primary hover-cc sub-act"
-                          data-toggle="advisory-menu"
-                          >Məsləhət Xidmətləri</a
-                        >
-                        <a
-                          href="./services-accountment.html"
-                          class="primary hover-cc sub-act"
-                          data-toggle="assurance-menu"
-                          >Muhasibatlıq Xidmətləri</a
+                          data-toggle="audit-menu"
+                          >Audit Xidmətləri</a
                         >
                         <a
                           href="./services-tax.html"
@@ -103,25 +97,59 @@
                           data-toggle="tax-menu"
                           >Vergi Xidmətləri</a
                         >
+
+                        <a
+                          href="./services-accountment.html"
+                          class="primary hover-cc sub-act"
+                          data-toggle="assurance-menu"
+                          >Muhasibatlıq Xidmətləri</a
+                        >
+                        <a
+                          href="./services-advisory.html"
+                          class="primary hover-cc sub-act"
+                          data-toggle="advisory-menu"
+                          >Məsləhət Xidmətləri</a
+                        >
+
+                        <a
+                          href="./services-advisory.html"
+                          class="primary hover-cc sub-act"
+                          data-toggle="advisory-menu"
+                          >Xarici ticarət və gömrük xidmətləri</a
+                        >
                       </div>
                     </div>
-
                     <div
-                      class="col-8 advisory-menu sub-menu gray-bg d-flex d-none"
+                      class="col-9 audit-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-6">
+                      <div class="col-7">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Məsləhət xidmətləri</p>
+                          <p class="title">Audit xidmətləri</p>
                           <a
-                            href="./services-advisory-1.html"
+                            href="./services-tax-1.html"
                             class="primary hover-cc"
-                            >Xarici ticarət və gömrük xidmətləri</a
+                            >Maliyyə hesabatlarının auditi</a
+                          >
+                          <a
+                            href="./services-tax-2.html"
+                            class="primary hover-cc"
+                            >Nizamnamə kapitalının formalaşdırılmasın auditi</a
+                          >
+                          <a
+                            href="./services-tax-3.html"
+                            class="primary hover-cc"
+                            >Vergi hesabatlarının auditi</a
+                          >
+                          <a
+                            href="./services-tax-4.html"
+                            class="primary hover-cc"
+                            >Əmlakın qiymətləndirilməsinin auditi</a
                           >
                         </div>
                       </div>
-                      <div class="col-6 p-5 ms-5">
+                      <div class="col-5 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -148,61 +176,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-8 assurance-menu sub-menu gray-bg d-flex">
-                      <div class="col-6">
-                        <div
-                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                        >
-                          <p class="title">Muhasibatlıq xidmətləri</p>
-                          <a
-                            href="./services-accountment-1.html"
-                            class="primary hover-cc"
-                            >Muhasibat uçotunun aparılması üzrə autsors
-                            xidməti</a
-                          >
-                          <a
-                            href="./services-accountment-2.html"
-                            class="primary hover-cc"
-                            >Maliyyə uçotunun aparılması üzrə autsors
-                            xidmətləri</a
-                          >
-                          <a
-                            href="./services-accountment-3.html"
-                            class="primary hover-cc"
-                            >Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
-                            hesabatların hazırlanması</a
-                          >
-                        </div>
-                      </div>
-                      <div class="col-6 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
-                          </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
-
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-8 tax-menu sub-menu gray-bg d-flex d-none">
-                      <div class="col-6">
+                    <div class="col-9 tax-menu sub-menu gray-bg d-flex d-none">
+                      <div class="col-7">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -229,7 +204,7 @@
                           >
                         </div>
                       </div>
-                      <div class="col-6 p-5 ms-5">
+                      <div class="col-5 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -255,6 +230,65 @@
                           </div>
                         </div>
                       </div>
+                    </div>
+                    <div class="col-9 assurance-menu sub-menu gray-bg d-flex">
+                      <div class="col-7">
+                        <div
+                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                        >
+                          <p class="title">Muhasibatlıq xidmətləri</p>
+                          <a
+                            href="./services-accountment-1.html"
+                            class="primary hover-cc"
+                            >Muhasibat uçotunun üzrə autsors xidməti</a
+                          >
+                          <a
+                            href="./services-accountment-2.html"
+                            class="primary hover-cc"
+                            >Maliyyə uçotunun üzrə autsors xidmətləri</a
+                          >
+                          <a
+                            href="./services-accountment-3.html"
+                            class="primary hover-cc"
+                            >Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
+                            hesabatların hazırlanması</a
+                          >
+                        </div>
+                      </div>
+                      <div class="col-5 p-5 ms-5">
+                        <div class="main-card">
+                          <div class="image-wrapper">
+                            <img
+                              src="./assets/img/client-behaviour-300x300.jpg"
+                              alt="Formula driver"
+                            />
+                          </div>
+                          <div class="text-wrapper p-4">
+                            <div class="card-tag darkgray">
+                              BUSINESS RESILENCE
+                            </div>
+                            <a href="#">
+                              <p class="fs-2 primary my-4 fw-600">
+                                Returning your business
+                              </p>
+                            </a>
+
+                            <br />
+                            <p class="card-info mt-2">
+                              Lorem ipsum dolor sit amet consectetur,
+                              adipisicing elit. Quis, temporibus?
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-9 advisory-menu gray-bg d-flex d-none">
+                      <div class="col-7">
+                        <div
+                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                        ></div>
+                      </div>
+                      <div class="col-5 p-5 ms-5"></div>
                     </div>
                   </div>
 
@@ -269,95 +303,38 @@
                     class="menu industries d-flex"
                     data-toggle="services-menu"
                   >
-                    <div class="col-4 lightgray-bg">
+                    <div class="col-3 lightgray-bg menu-nav-left">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
-                        <a
-                          href="#"
-                          class="primary hover-cc sub-act"
-                          data-toggle="advisoryInd-menu"
-                          >Advisory-Ind</a
+                        <a href="#" class="primary hover-cc"
+                          >Xəstəxanalar və hospitallar</a
                         >
-                        <a
-                          href="#"
-                          class="primary hover-cc sub-act"
-                          data-toggle="assuranceInd-menu"
-                          >Assurance-Ind</a
+                        <a href="#" class="primary hover-cc">Hotel və Turizm</a>
+                        <a href="#" class="primary hover-cc"
+                          >Tikinti və əmlak sahəsi</a
                         >
-                        <a
-                          href="#"
-                          class="primary hover-cc sub-act"
-                          data-toggle="taxInd-menu"
-                          >Tax-Ind</a
+                        <a href="#" class="primary hover-cc"
+                          >Kənd Təsərüfatı, emal</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Ticarət və Pərakəndəçilik</a
+                        >
+                        <a href="#" class="primary hover-cc">Təhsil</a>
+                        <a href="#" class="primary hover-cc"
+                          >Maliyyə qurumları</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >İstehsalat sahəsi</a
                         >
                       </div>
                     </div>
 
-                    <div
-                      class="col-8 advisoryInd-menu sub-menu gray-bg d-flex d-none"
+                    <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
+                    <!-- <div
+                      class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
                     >
-                      <div class="col-6">
-                        <div
-                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                        >
-                          <p class="title">Advisory</p>
-                          <a href="#" class="primary hover-cc"
-                            >Business consulting services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business process solutions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business risk services</a
-                          >
-                          <a href="#" class="primary hover-cc">Cybersecurity</a>
-                          <a href="#" class="primary hover-cc"
-                            >Forensic and investigation services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Mergers and acquisitions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Recovery and reorganisation</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Transactional advisory services</a
-                          >
-                          <a href="#" class="primary hover-cc">Valuations</a>
-                        </div>
-                      </div>
-                      <div class="col-6 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
-                          </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
-
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="col-8 assuranceInd-menu sub-menu gray-bg d-flex"
-                    >
-                      <div class="col-6">
+                      <div class="col-7">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -387,7 +364,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-6 p-5 ms-5">
+                      <div class="col-5 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -415,9 +392,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 taxInd-menu sub-menu gray-bg d-flex d-none"
+                      class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-6">
+                      <div class="col-7">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -447,7 +424,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-6 p-5 ms-5">
+                      <div class="col-5 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -473,7 +450,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <a href="#" class="primary hover-cc sub-primary">
                     Insights
