--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
           <div class="row mx-0 px-0">
             <div class="col-12 col-md-6 firm-image p-5 pos-rel">
               <div class="firm-overlay"></div>
-              <p>What is trending?</p>
+              <p class="firm-title">What is trending?</p>
               <div class="text-wrapper">
                 <span>IFRS</span>
                 <a href="#">Insights into IFRS 16</a>
