--- a/about-us.html
+++ b/about-us.html
@@ -552,7 +552,7 @@
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fs-2-5 fw-600">Connect</p>
-            <a href="#">Meet our people</a>
+            <a href="#team">Meet our people</a>
             <a href="#">Contact us</a>
           </div>
         </div>
@@ -560,16 +560,16 @@
           <div class="link-wrapper">
             <p class="title fw-600">About</p>
             <a href="./about-us.html">Haqqımızda</a>
-            <a href="#">Careers</a>
-            <a href="#">Insights</a>
+            <!-- <a href="#">Careers</a> -->
+            <a href="insights.html">Insights</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fw-600">Legal</p>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie policy</a>
-            <a href="#">Disclaimer</a>
+            <a href="privacy.html">Məxfilik</a>
+            <a href="policy.html">Cookie policy</a>
+            <a href="disclaimer.html">Disclaimer</a>
           </div>
         </div>
         <div class="col-12 mobile-footer my-5">
@@ -582,8 +582,8 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="#">Meet our people</a>
-              <a href="#">Contact us</a>
+              <a href="team.html">Meet our people</a>
+              <a href="contact.html">Contact us</a>
             </div>
           </div>
         </div>
@@ -597,9 +597,9 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="#">About us</a>
-              <a href="#">Careers</a>
-              <a href="#">Insights</a>
+              <a href="about-us.html">About us</a>
+              <!-- <a href="#">Careers</a> -->
+              <a href="insights.html">Insights</a>
             </div>
           </div>
         </div>
